<resources>
    <string name="app_name">c001apk</string>
    <string name="tab_home">首页</string>
    <string name="tab_message">消息</string>
    <string name="tab_setting">设置</string>
    <string name="search">搜索</string>
    <string name="refresh">刷新</string>
    <string name="copy_link">复制链接</string>
    <string name="open_in_browser">在浏览器中打开</string>
    <string name="search_history">历史搜索</string>
    <string name="clearAll">清除</string>
    <string name="clearAllTitle">确认清除全部历史记录吗？</string>
    <string name="clear_cache">清理缓存</string>

    <string name="settings_theme">主题</string>
    <string name="settings_system_theme_color_summary">系统取色</string>
    <string name="settings_system_theme_color">系统主题色</string>
    <string name="settings_theme_color">主题颜色</string>
    <string name="dark_theme">深色主题</string>
    <string name="settings_pure_black_dark_theme">纯黑主题</string>
    <string name="settings_pure_black_dark_theme_summary">当深色主题启用时使用纯黑主题</string>
    <string name="dark_theme_off">总是关闭</string>
    <string name="dark_theme_on">总是开启</string>
    <string name="follow_system">跟随系统</string>
    <string name="dark_theme_follow_system">@string/follow_system</string>

    <!-- Colors -->
    <string name="color_default">默认</string>
    <string name="color_sakura">樱花</string>
    <string name="color_red">红色</string>
    <string name="color_pink">粉色</string>
    <string name="color_purple">紫色</string>
    <string name="color_deep_purple">深紫</string>
    <string name="color_indigo">靛青</string>
    <string name="color_blue">蓝色</string>
    <string name="color_light_blue">浅蓝</string>
    <string name="color_cyan">青色</string>
    <string name="color_teal">青绿</string>
    <string name="color_green">绿色</string>
    <string name="color_light_green">浅绿</string>
    <string name="color_lime">黄绿</string>
    <string name="color_yellow">黄色</string>
    <string name="color_amber">琥珀</string>
    <string name="color_orange">橙色</string>
    <string name="color_deep_orange">深橙</string>
    <string name="color_brown">棕色</string>
    <string name="color_blue_grey">灰蓝</string>

    <string name="emoji">表情</string>
    <string name="show_emoji">显示表情</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="click_to_login">点击登录</string>
    <string name="logoutTitle">确定退出登录？</string>
    <string name="follow">关注</string>
    <string name="feed">动态</string>
    <string name="fans">粉丝</string>
    <string name="notification">通知</string>
    <string name="more">更多</string>
    <string name="reply">回复</string>
    <string name="publish">发布</string>
    <string name="loginPhone">短信登录</string>
    <string name="get_sms_token">获取验证码</string>
    <string name="sms_token">验证码</string>
    <string name="loginPass">密码登录</string>
    <string name="no_more">没有更多了</string>
    <string name="feedback">反馈</string>
    <string name="about">关于</string>
    <string name="about_view_source_code"><![CDATA[在 %1$s 查看源码]]></string>
    <string name="others">其他</string>
    <string name="about_open_source">开放源代码许可证</string>
    <string name="replyAndForward">回复并转发</string>
    <string name="customToken">自定义Token</string>
    <string name="xAppToken">X-App-Token</string>
    <string name="xAppDevice">X-App-Device</string>
    <string name="full_quality">默认原图</string>
    <string name="display">显示</string>
    <string name="auto_clear_key_word">自动清除关键词</string>
    <string name="clear_Key_word">搜索后清除关键词</string>
    <string name="feed_default">实时</string>
    <string name="feed_hot">热度</string>
    <string name="feed_reply">评论数</string>
    <string name="order">顺序</string>
    <string name="type">类型</string>
    <string name="type_all">全部</string>
    <string name="type_feed">动态</string>
    <string name="type_article">图文</string>
    <string name="type_pic">酷图</string>
    <string name="type_reply">评论</string>
    <string name="topic_order">排序规则</string>
    <string name="topic_latest_reply">最近回复</string>
    <string name="topic_latest_publish">最新发布</string>
    <string name="topic_hot">热度排序</string>
    <string name="show_reply">查看评论</string>
    <string name="download">下载</string>
    <string name="szlmId">数字联盟ID</string>
    <string name="params">机型参数</string>
    <string name="user_black_list">用户黑名单</string>
    <string name="add">添加</string>
    <string name="block">加入黑名单</string>
    <string name="publishFeed">发布动态</string>
    <string name="share">分享</string>
    <string name="history">浏览历史</string>
    <string name="record_history">记录浏览历史</string>
    <string name="favorite">收藏</string>
    <string name="delete">删除</string>
    <string name="copyLink">复制链接</string>
    <string name="report">举报</string>
    <string name="topic_black_list">话题黑名单</string>
    <string name="font_scale">字体调节</string>
    <string name="show_icon_mini_card">头条显示广场</string>
    <string name="open_link_outside">使用外部浏览器打开链接</string>
    <string name="regenerate">重新生成随机设备信息</string>
    <string name="my_freq">我的常去</string>
    <string name="subscribe">关注</string>
    <string name="copyText">复制</string>
    <string name="show_reply_1">查看对话</string>
    <string name="local_favorite">本地收藏</string>
    <string name="about_developer">开发者</string>
    <string name="backup">导出</string>
    <string name="restore">导入</string>
    <string name="my_fav">我的收藏</string>
    <string name="my_like">我的赞</string>
    <string name="my_reply">我的回复</string>
    <string name="image_quality">图片画质</string>
    <string name="retry">重试</string>
    <string name="loading_failed">加载失败</string>
    <string name="color_filter_in_dark_mode">深色模式压暗图片</string>
    <string name="edit_tab">编辑Tab</string>
    <string name="random_value">随机值</string>
    <string name="system_info">使用系统信息</string>
    <string name="update">更新</string>
    <string name="show_question">查看提问</string>
    <string name="type_rating">点评</string>
    <string name="type_question">提问</string>
    <string name="type_answer">回答</string>
    <string name="type_vote">投票</string>
    <string name="check_apps_update">检查应用更新</string>
    <string name="check_user_info">查看用户资料</string>
</resources>