<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/showQuestion"
        android:icon="@drawable/outline_help_outline_24"
        android:showAsAction="always"
        android:title="@string/show_question"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/showReply"
        android:icon="@drawable/ic_message3"
        android:showAsAction="always"
        android:title="@string/show_reply"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/favorite"
        android:title="@string/favorite" />

    <item
        android:id="@+id/share"
        android:showAsAction="never"
        android:title="@string/share" />

    <item
        android:id="@+id/copyLink"
        android:showAsAction="never"
        android:title="@string/copyLink" />

    <item
        android:id="@+id/report"
        android:showAsAction="never"
        android:title="@string/report" />

    <item
        android:id="@+id/block"
        android:showAsAction="never"
        android:title="@string/block" />

</menu>
