<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:showAsAction="always"
        android:title="@string/search" />

    <item
        android:id="@+id/subscribe"
        android:showAsAction="never"
        android:title="@string/subscribe" />

    <item
        android:id="@+id/share"
        android:showAsAction="never"
        android:title="@string/share" />

    <item
        android:id="@+id/report"
        android:showAsAction="never"
        android:title="@string/report" />

    <item
        android:id="@+id/block"
        android:showAsAction="never"
        android:title="@string/block" />

    <item
        android:id="@+id/check"
        android:showAsAction="never"
        android:title="@string/check_user_info" />

</menu>
