<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/app_name">
        <Preference
            android:icon="@drawable/ic_phone"
            android:dependency="zmlmId"
            android:key="zmlmId"
            android:title="@string/zmlmId" />
        <Preference
            android:icon="@drawable/ic_dev_mode"
            android:key="sbparams"
            android:title="@string/params" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_theme">
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:icon="@drawable/outline_palette_24"
            android:key="followSystemAccent"
            android:summary="@string/settings_system_theme_color"
            android:title="@string/settings_system_theme_color" />
        <rikka.preference.SimpleMenuPreference
            android:defaultValue="DEFAULT"
            android:dependency="followSystemAccent"
            android:entries="@array/color_texts"
            android:entryValues="@array/color_values"
            android:icon="@drawable/outline_format_color_fill_24"
            android:key="themeColor"
            android:summary="%s"
            android:title="@string/settings_theme_color" />
        <rikka.preference.SimpleMenuPreference
            android:defaultValue="-1"
            android:entries="@array/theme_texts"
            android:entryValues="@array/theme_values"
            android:icon="@drawable/outline_dark_mode_24"
            android:key="darkTheme"
            android:summary="%s"
            android:title="@string/dark_theme" />
        <rikka.material.preference.MaterialSwitchPreference
            android:icon="@drawable/outline_invert_colors_24"
            android:key="blackDarkTheme"
            android:summary="@string/settings_pure_black_dark_theme_summary"
            android:title="@string/settings_pure_black_dark_theme" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/display">
        <Preference
            android:icon="@drawable/ic_block"
            android:dependency="zmlmId"
            android:key="blackList"
            android:title="@string/black_list" />
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_history"
            android:key="isRecordHistory"
            android:title="@string/record_history" />
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_feed"
            android:key="isHomeFeedAddCookie"
            android:summary="@string/home_feed_tip"
            android:title="@string/is_home_feed_add_cookie" />
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_feed"
            android:key="isKeepFeed"
            android:title="@string/keep_feed" />
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_image"
            android:key="isFullImageQuality"
            android:title="@string/full_quality" />
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:disableDependentsState="false"
            android:icon="@drawable/ic_emoji"
            android:key="showEmoji"
            android:title="@string/show_emoji" />
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:dependency="showEmoji"
            android:icon="@drawable/ic_emoji"
            android:key="allHuaji"
            android:title="@string/all_huaji" />
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_clear_all"
            android:key="isClearKeyWord"
            android:title="@string/auto_clear_key_word"
            android:summary="@string/clear_Key_word"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/others">
        <Preference
            android:icon="@drawable/ic_logo"
            android:key="about"
            android:title="@string/about" />
    </PreferenceCategory>

</PreferenceScreen>
